fixed arrow issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body{
   background-image: none;
   background-image: cover;
   background-repeat: no-repeat;
-  scroll-behavior: none;
   background-size: 100%;
   background-color: black;
   color: white;
